# yggdrasil

./: .env.example  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: design-principles.md  eval-benchmarks.md  llm-usage.md  multi-user.md  orchestration.md
docs/design/: scheduler.md  task-runs.md
migrations/: 20260702000001_initial.sql  20260702000002_task_run_backend.sql
src/: blob.rs  bus.rs  config.rs  db.rs  hermes.rs  interrupt.rs  lib.rs  lock.rs  main.rs  mcp.rs  scheduler.rs  watcher.rs  worktree.rs
src/bench/: drivers.rs  mod.rs  runner.rs
src/cli/: agent_cmd.rs  bar_cmd.rs  bench_cmd.rs  chat_cmd.rs  dashboard_cmd.rs  handoff_cmd.rs  hermes_backend.rs  hermes_cmd.rs  hook_cmd.rs  init.rs  init_project.rs  interrupt_cmd.rs  learning_cmd.rs  lock_cmd.rs  logs_cmd.rs  memory_cmd.rs  mod.rs  msg_cmd.rs  plan_cmd.rs  prime.rs  recover.rs  remember_cmd.rs  rollup_cmd.rs  run_cmd.rs  scheduler_cmd.rs  spawn.rs  status_cmd.rs  stop_check.rs  task_cmd.rs  watcher_cmd.rs
src/models/: agent.rs  event.rs  handoff.rs  learning.rs  memory.rs  repo.rs  session.rs  task.rs  task_run.rs  worker.rs
src/stats/: collector.rs  tracker.rs
src/tui/: app.rs  arc_diagram.rs  attention.rs  calendar_heatmap.rs  chat_view.rs  constellation.rs  dag_view.rs  dashboard.rs  disclosure_governor.rs  locks_view.rs  log_view.rs  motion.rs  nerdy.rs  pane_filter.rs  pip.rs  run_grid.rs  run_river.rs  runs_view.rs  saved_views.rs  spinner.rs  tasks_view.rs
tests/: cycle_lint.rs  hermes_client.rs  integration.rs  mcp_client.rs  output_size_cap.rs  remember.rs  task_move.rs  task_soft_delete.rs  tui_arc_diagram.rs  tui_attention.rs  tui_constellation.rs  tui_disclosure_governor.rs  tui_flash.rs  tui_help.rs  tui_inline_rename.rs  tui_narrow_collapse.rs  tui_ridgeline.rs  tui_ripple.rs  watcher_consolidation.rs
tests/common/: mod.rs
