[package]
name = "ygg"
version = "0.1.0"
edition = "2024"
description = "Yggdrasil — High-density agent orchestrator"
license = "MIT"
repository = "https://github.com/ng/yggdrasil"
readme = "README.md"
authors = ["Jonathan Ng <jon@jonathanng.com>"]
keywords = ["agent", "orchestrator", "claude-code", "tmux", "sqlite"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ygg"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errors
thiserror = "2"
anyhow = "1"

# TUI
ratatui = "0.29"
crossterm = "0.28"
# Officially-blessed ratatui ecosystem (yggdrasil-157):
# - ratatui-macros: cuts layout/constraint boilerplate
# - ansi-to-tui: render captured agent stdout (with SGR codes) as Text
# - tui-popup: reusable centered overlay primitive
# - tui-input: headless single-line input (used by palette + inline rename)
# - crokey: declarative crossterm key-combo parsing for keybind registry
ratatui-macros = "0.6"
ansi-to-tui = "7"
tui-popup = "0.6"
tui-input = "0.11"
crokey = "1"

# Progress / spinners
indicatif = "0.17"

# HTTP client (hermes-gateway integration — first HTTP client in the tree)
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }

# Signal handling
tokio-util = { version = "0.7", features = ["rt"] }
regex = "1.12.3"
sha2 = "0.11.0"
futures = "0.3.32"
once_cell = "1.21.4"
toml = "0.9"
async-trait = "0.1"

# Scheduler singleton file lock (replaces the Postgres advisory lock)
fs4 = { version = "0.13", features = ["sync"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
# Mock HTTP server for the hermes-gateway client tests (no network, no gateway).
wiremock = "0.6"
